# Restaurant-webapp

./: .coveragerc  .env.sample  .flake8  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
media/personnel/: manager.avif
nginx/: Dockerfile  nginx.conf
reservation/: admin.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
reservation/migrations/: 0001_initial.py  0002_initial.py  0003_remove_table_location_alter_table_capacity.py  0004_table_is_reserved.py  0005_alter_reservation_total_persons.py  0006_reservation_is_active.py  0007_rename_customer_reservation_user.py  0008_alter_reservation_user.py  0009_alter_reservation_options_alter_table_options.py  0010_alter_reservation_total_persons.py  0011_alter_reservation_user.py  0012_alter_reservation_user.py  0013_reservation_user_name_reservation_user_phone.py  0014_alter_table_number.py
restaurant/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
restaurant/migrations/: 0001_initial.py  0002_review.py  0003_alter_review_rating.py  0004_alter_review_rating.py  0005_alter_personnel_photo.py  0006_alter_personnel_options_alter_review_options_and_more.py  0007_alter_review_rating.py
services/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
services/migrations/: 0001_initial.py  0002_alter_mealcategory_options.py  (+6 more)
templates/: base.html
users/: admin.py  forms.py  logger.py  models.py  services.py  tests.py  urls.py  validators.py  views.py
(+65 files in other folders)
