[project]
name = "restaurant-webapp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.1",
    "django>=5.2",
    "django-celery-beat>=2.8.0",
    "django-celery-results>=2.6.0",
    "django-cors-headers>=4.7.0",
    "django-crispy-forms>=2.4",
    "django-redis>=5.4.0",
    "eventlet>=0.39.1",
    "gunicorn>=23.0.0",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "redis>=5.2.1",
]

[dependency-groups]
dev = [
    "colorlog>=6.9.0",
    "ipython>=9.1.0",
]
lint = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
]

[tool.black]
line-length = 119
exclude = '''
(
  /(
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
)
'''

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = '.venv'

[tool.isort]
line_length = 119
